feat: Adding new enpoints for backend
