# backend/models/activity/activity_model.go
@@ -3,6 +3,7 @@ package activity
 type ActivityModel interface {
 	GetActivityByID(id string) (Activity, bool)
 	GetActivitiesByCreatorID(creatorID string) []Activity
+	GetActivitiesByGroupIDs(groupIDs []string) []Activity
 	CreateActivity(group Activity) Activity
 	UpdateActivity(id string, updates map[string]interface{}) (Activity, bool)
 	DeleteActivity(id string) bool
